manifest/liquibase-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: liquibase-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: liquibase
  template:
    metadata:
      labels:
        app: liquibase
    spec:
      containers:
        - name: liquibase
          image: liquibase/liquibase:4.17.0
          command: ["liquibase", "update", "--changeLogFile=changelog/changelog.xml", "--url=jdbc:postgresql://postgres-service.default.svc.cluster.local:5432/sf-db", "--username=postgres", "--password=seaflux@123", "--driver=org.postgresql.Driver"]
          volumeMounts:
            - name: liquibase-changelog-volume
              mountPath: /liquibase/changelog
      volumes:
        - name: liquibase-changelog-volume
          configMap:
            name: liquibase-changelog
      tolerations:
        - key: "node-role.kubernetes.io/control-plane"
          operator: "Exists"
          effect: "NoSchedule"
