manifest/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-controller
  # annotations:
  #   cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
      - api.k8s.portal.seaflux.dev
      secretName: my-secret
  ingressClassName: nginx
  rules:
  - host: "api.k8s.portal.seaflux.dev"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: sf-app-service
            port:
              number: 3000
